# multiGPU-ANN

./: .gitignore  README.md  build_scenario1_NO-HDD.sh  build_scenario1_deterministic.sh  build_scenario1_nonDet-NO-HDD.sh  env2.sh  run_3gpu_IO_create_vectors.sh  run_3gpu_NO_HDD_merge_only.sh
benchmarking-NNDescent/: CMakeLists.txt  main.cu
benchmarking-NNDescent-Deterministic/: CMakeLists.txt  generate_dummy_knn.cu  main.cu
benchmarking-NNDescent-Deterministic-NoHDD/: CMakeLists.txt  README.md  main.cu
benchmarking-NNDescent-Deterministic-NoHDD/cmake/: shard_0.txt  shard_1.txt  vectors_shard_0.txt  vectors_shard_1.txt
benchmarking-NNDescent-Deterministic-NoHDD/data/artificial/: create.py
benchmarking-NNDescent-Deterministic-NoHDD/gpuknn/: db_size.cu  gen_large_knngraph.cu  knncuda.cu  knncuda_tools.cuh  knnmerge.cuh  nndescent.cu  nndescent.cuh  random_seed_config.cu
benchmarking-NNDescent-Deterministic-NoHDD/tools/: knndata_manager.hpp
benchmarking-NNDescent-Deterministic/cmake/: cmake_install.cmake  eval.py  gknng  run.sh
benchmarking-NNDescent-Deterministic/gpuknn/: gen_large_knngraph.cu  gen_large_knngraph.cuh  knncuda_tools.cu  knnmerge.cu  nndescent.cuh  random_seed_config.cuh
benchmarking-NNDescent-Deterministic/results/: compare_db.py  compare_graphs.py  compare_report_reversed_shrink.py  compare_resultsFiles.py  compare_reversed_graphs_results.py  compare_shrink_results.py  comparison_report_please.txt
benchmarking-NNDescent-Deterministic/results/ultimate_proof_of_determinism/: NNDescent-KNNG.kgraph_DETERMINISTIC_v0.txt  NNDescent-KNNG_DETERMINISTIC.kgraph  report_reversed_deterministic.txt  reversed_graph_before_shrink_J1_I0_v2.txt  reversed_graph_before_shrink_J2_I0_v1.txt  reversed_graph_before_shrink_J2_I1_v2.txt
benchmarking-NNDescent-Deterministic/tools/: debug_version_PrepareForUpdateForMerge
benchmarking-NNDescent-NoHDD/: CMakeLists.txt  main.cu  random_offset_tracker.cpp  random_offset_tracker.h  xmuknn.cpp  xmuknn.h
benchmarking-NNDescent-NoHDD/cmake/: FindcuBLAS.cmake
benchmarking-NNDescent-NoHDD/cmake/gknng.dir/: DependInfo.cmake  build.make  compiler_depend.make  dlink.txt  main.cu.o.d
benchmarking-NNDescent-NoHDD/cmake/knncuda.dir/: DependInfo.cmake  compiler_depend.internal
benchmarking-NNDescent-NoHDD/cmake/knncuda.dir/gpuknn/: knncuda.cu.o.d  knncuda_tools.cu.o.d  knnmerge.cu.o.d
benchmarking-NNDescent-NoHDD/gpuknn/: db_size.cuh  gen_large_knngraph.cu  knncuda_tools.cu  knnmerge.cu  nndescent.cu  nndescent.cuh
benchmarking-NNDescent-NoHDD/results/: 10000000_k32_s3_NoHDD.txt  10000000_k32_s6_NoHDD.txt  10000000_k32_s9_NoHDD.txt  1000000_k32_s12_NoHDD.txt  1000000_k32_s15_NoHDD.txt  1000000_k32_s18_NoHDD.txt  1000000_k32_s21_NoHDD.txt  1000000_k32_s24_NoHDD.txt  1000000_k32_s27_NoHDD.txt  1000000_k32_s30_NoHDD.txt  1000000_k32_s3_NoHDD.txt  1000000_k32_s6_NoHDD.txt  1000000_k32_s9_NoHDD.txt  20000000_k32_s3_NoHDD.txt  20000000_k32_s6_NoHDD.txt  30000000_k32_s3_NoHDD.txt  30000000_k32_s6_NoHDD.txt  40000000_k32_s3_NoHDD.txt  40000000_k32_s6_NoHDD.txt  50000000_k32_s3_NoHDD.txt  50000000_k32_s6_NoHDD.txt  NNDescent-KNNG.kgraph.txt
benchmarking-NNDescent-NoHDD/tools/: knndata_manager.hpp
benchmarking-NNDescent/cmake/: CMakeCache.txt  Makefile
benchmarking-NNDescent/gpuknn/: gen_large_knngraph.cu  knncuda_tools.cu  knncuda_tools.cuh  nndescent.cu  timer_globals.h
benchmarking-NNDescent/results/: 10000000_k32_s3.txt  10000000_k32_s6.txt  10000000_k32_s9.txt  1000000_k32_s12.txt  1000000_k32_s3.txt  1000000_k32_s6.txt  1000000_k32_s9.txt  20000000_k32_s3.txt  20000000_k32_s6.txt  30000000_k32_s3.txt  30000000_k32_s6.txt  40000000_k32_s3.txt  40000000_k32_s6.txt  50000000_k32_s3.txt  50000000_k32_s6.txt
benchmarking-NNDescent/tools/: knndata_manager.hpp
building/: build_scenario1_IO.sh  build_scenario1_nonDet.sh
jobsToLaunch/: run_3gpu_NOHDD_PROFILE.sh  run_3gpu_deterministic_build_only.sh  run_3gpu_deterministic_create_vectors_dataset.sh  run_3gpu_deterministic_generate_dummy_knn.sh  run_3gpu_deterministic_merge_only.sh  run_3gpu_deterministic_normal.sh  run_3gpu_nonDet.sh  run_3gpu_nonDet_NO_HDD_full.sh
results/: SK-1M-12d-HDD.err  SK-1M-12d-HDD.out  SK-1M-12d-NOHDD.err  SK-1M-12d-NOHDD.out
shared_data/artificial/: create.py
sophia_alcf/: README.md  env_sophia.sh
sophia_alcf/building/: build_scenario1.sh  build_scenario1_IO.sh  build_scenario1_NO-HDD.sh  build_scenario1_deterministic.sh  build_scenario1_nonDet-NO-HDD.sh
sophia_alcf/jobsToLaunch/: create_dataset-%j.err  create_dataset-%j.out  create_dataset.sh  pbs-%j.err  pbs-%j.out  run_3gpu_IO_create_vectors.sh  run_3gpu_NOHDD_PROFILE.sh  run_3gpu_NO_HDD_merge_only.sh  run_3gpu_deterministic_build_only.sh  run_3gpu_deterministic_create_vectors_dataset.sh  run_3gpu_deterministic_generate_dummy_knn.sh  run_3gpu_deterministic_merge_only.sh  run_3gpu_deterministic_normal.sh  run_3gpu_nonDet.sh  run_3gpu_nonDet_NO_HDD_full.sh  run_3gpu_profile_small_dataset.sh
sophia_alcf/jobsToLaunch/results/HDD/: SK10M-12d-3s.err  SK10M-12d-3s.out  SK10M-12d-6s.err  SK10M-12d-6s.out  SK10M-12d-9s.err  SK10M-12d-9s.out  SK1M-12d-12s.err  SK1M-12d-12s.out  SK1M-12d-3s.err  SK1M-12d-3s.out  SK1M-12d-6s.err  SK1M-12d-6s.out  SK1M-12d-9s.err  SK1M-12d-9s.out  SK20M-12d-3s.err  SK20M-12d-3s.out  SK20M-12d-6s.err  SK20M-12d-6s.out  SK30M-12d-3s.err  SK30M-12d-3s.out  SK30M-12d-6s.err  SK30M-12d-6s.out
sophia_alcf/jobsToLaunch/results/NoHDD/: SK10M-12d-NoHDD-3s.err  SK10M-12d-NoHDD-3s.out  SK10M-12d-NoHDD-6s.err  SK10M-12d-NoHDD-6s.out  SK10M-12d-NoHDD-9s.err  SK10M-12d-NoHDD-9s.out  SK1M-12d-NoHDD-12s.err  SK1M-12d-NoHDD-12s.out  SK1M-12d-NoHDD-15s.err  SK1M-12d-NoHDD-15s.out  SK1M-12d-NoHDD-18s.err  SK1M-12d-NoHDD-18s.out  SK1M-12d-NoHDD-21s.err  SK1M-12d-NoHDD-21s.out  SK1M-12d-NoHDD-24s.err  SK1M-12d-NoHDD-24s.out  SK1M-12d-NoHDD-27s.err  SK1M-12d-NoHDD-27s.out  SK1M-12d-NoHDD-30s.err  SK1M-12d-NoHDD-30s.out  SK1M-12d-NoHDD-3s.err  SK1M-12d-NoHDD-3s.out  SK1M-12d-NoHDD-6s.err  SK1M-12d-NoHDD-6s.out  SK1M-12d-NoHDD-9s.err  SK1M-12d-NoHDD-9s.out  SK20M-12d-NoHDD-3s.err  (+7 more)
